simplify containers with mixin; fix icon overlapping

--- a/index.jade
+++ b/index.jade
@@ -21,16 +21,16 @@ div.container
           p I'm Nate, an NLP and soon-to-be frontend developer. I have extensive practical experience in software architecture and applied NLP. I'm a big fan of open source.
         div.col-lg-4
           img.img-circle(src="http://placehold.it/200x200?text=Me!", alt="picture of Nate Glenn")
-      hr.codey-sep.codey-sep-header
+      hr.codey-sep
       p
         | Java developer - NLP practitioner - Open source enthusiast
     section
       h2 Portfolio
-      hr.codey-sep.codey-sep-section
+      hr.codey-sep
       | buncha pictures...
     section
       h2 Contact Me
-      hr.code-sep
+      hr.codey-sep
       div.row
         div.col-lg-5.col-lg-offset-1
           form
