fix overmatching of header p formatting

--- a/index.jade
+++ b/index.jade
@@ -18,7 +18,7 @@ div.container
     header
       div.row
         div.col-lg-8
-          p I'm Nate, an NLP and soon-to-be frontend developer. I have extensive practical experience in software architecture and applied NLP. I'm a big fan of open source.
+          p.intro I'm Nate, an NLP and soon-to-be frontend developer. I have extensive practical experience in software architecture and applied NLP. I'm a big fan of open source.
         div.col-lg-4
           img.img-circle(src="http://placehold.it/200x200?text=Me!", alt="picture of Nate Glenn")
       hr.codey-sep
@@ -53,7 +53,7 @@ div.container
         div.clearfix.visible-lg
         div.col-lg-5.col-lg-offset-6
           p.
-            Note: no soliciting or recruiters, o-negai shimasu!
+            Note: no soliciting or recruiters, por favor!
   footer
     div#upper-footer
       h3 About this page
