--- a/css/style.scss
+++ b/css/style.scss
@@ -6,8 +6,12 @@ $icon-size: .8em;
 @mixin container($bg-color, $text-color) {
   background-color: $bg-color;
   color: $text-color;
-  max-width: 1024px;
   font-size: 24px;
+  // centered with good margins
+  max-width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
+  // no space between containers
   *:last-child {
     margin-bottom: 0px;
   }
@@ -26,10 +30,10 @@ header {
   @include container($header-color, white);
   // background-color: $header-color;
   padding-top: 4em;
-  p {
-    margin-top: 2em;
-    margin-left: 1em;
-  }
+}
+.intro {
+  margin-top: 2em;
+  margin-left: 1em;
 }
 
 h2 {
