some work on social buttons

--- a/index.jade
+++ b/index.jade
@@ -59,9 +59,21 @@ div.container
       h3 About this page
       p
         | Made with (lightning) and (cake) by
-        a(href="#") Nate Glenn
+        a(href="#")  Nate Glenn
         | .
       h3 Around the web
-        p Social symbols here...
+        ul.social-list
+          li
+            a.btn.btn-default.btn-circle.btn-lg
+              i.fa.fa-github(aria-hidden="true")
+          li
+            a.btn.btn-default.btn-circle.btn-lg
+              i.fa.fa-google-plus(aria-hidden="true")
+          li
+            a.btn.btn-default.btn-circle.btn-lg
+              i.fa.fa-skype(aria-hidden="true")
+          li
+            a.btn.btn-default.btn-circle.btn-lg
+              i.fa.fa-linkedin(aria-hidden="true")
     div#lower-footer
       p Nate Glenn <Copyright> 2016. All rights reversed.
