--- a/css/style.scss
+++ b/css/style.scss
@@ -78,3 +78,16 @@ section > .codey-sep {
   border-radius: 50%;
   margin-top: 1em;
 }
+
+.btn-circle.btn-lg {
+  text-align: center;
+  border-radius: 50%;
+  padding: 16px;
+  font-size: 20px;
+  height: 50px;
+  width: 50px;
+}
+
+.social-list li {
+  display: inline;
+}
