--- a/index.jade
+++ b/index.jade
@@ -3,7 +3,7 @@ link(script="https://code.jquery.com/jquery-2.2.4.min.js")
 link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
 link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
 link(rel="stylesheet",href="css/style.css")
-  div.container
+div.container
   nav.navbar.navbar-default.navbar-fixed-top(role="navigator")
     div.navbar-header
       a.navbar-brand qlip
@@ -20,11 +20,11 @@ link(rel="stylesheet",href="css/style.css")
       div.row
         div.col-lg-8
           p.intro I'm Nate, an NLP and soon-to-be frontend developer. I have extensive practical experience in software architecture and applied NLP. I'm a big fan of open source.
+          hr.codey-sep
+          p.titles
+            | Java developer - NLP practitioner - Open source enthusiast
         div.col-lg-4
-          img.img-circle(src="http://placehold.it/200x200?text=Me!", alt="picture of Nate Glenn")
-      hr.codey-sep
-      p
-        | Java developer - NLP practitioner - Open source enthusiast
+          img.img-circle(src="http://placehold.it/220x220?text=Me!", alt="picture of Nate Glenn")
     section.clearfix
       h2 Portfolio
       hr.codey-sep
