--- a/index.jade
+++ b/index.jade
@@ -25,10 +25,22 @@ div.container
             | Java developer - NLP practitioner - Open source enthusiast
         div.col-lg-4
           img.img-circle(src="http://placehold.it/220x220?text=Me!", alt="picture of Nate Glenn")
-    section.clearfix
+    section.clearfix#portfolio
       h2 Portfolio
       hr.codey-sep
-      | buncha pictures...
+      div.row
+        div.col-lg-6.left-col
+          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+        div.col-lg-6.right-col
+          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+        div.col-lg-6.left-col
+          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+        div.col-lg-6.right-col
+          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+        div.col-lg-6.left-col
+          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+        div.col-lg-6.right-col
+          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
     section.clearfix
       h2 Contact Me
       hr.codey-sep
