add shadow to nav

--- a/index.jade
+++ b/index.jade
@@ -23,24 +23,24 @@ div.container
           hr.codey-sep
           p.titles
             | Java developer - NLP practitioner - Open source enthusiast
-        div.col-lg-4
+        div.col-lg-4.text-center
           img.img-circle(src="http://placehold.it/220x220?text=Me!", alt="picture of Nate Glenn")
     section.clearfix#portfolio
       h2 Portfolio
       hr.codey-sep
-      div.row
+      div.row.text-center
         div.col-lg-6.left-col
-          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
         div.col-lg-6.right-col
-          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
         div.col-lg-6.left-col
-          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
         div.col-lg-6.right-col
-          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
         div.col-lg-6.left-col
-          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
         div.col-lg-6.right-col
-          img.img(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
     section.clearfix
       h2 Contact Me
       hr.codey-sep
@@ -63,9 +63,8 @@ div.container
         div.col-lg-5
           p.
             Want to contact me? Use this handy-dandy form! Tell me about a cool project you're working on, invite me to work for money, or just give me money. Anything's good, really.
-        div.clearfix.visible-lg
         div.col-lg-5.col-lg-offset-6
-          p.
+          p#note.
             Note: no soliciting or recruiters, por favor!
 footer
   div#upper-footer
