--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,8 @@ $background-color: dimGray;
 $head-foot-color: #aaa;
 $section-color: lightGray;
 $icon-size: 0.8em;
+$container-size: 1024px;
+$bs-lg: 1200px;
 
 @mixin container($bg-color, $text-color) {
     background-color: $bg-color;
@@ -9,7 +11,7 @@ $icon-size: 0.8em;
     font-size: 24px;
 
     // centered with good margins
-    max-width: 1024px;
+    max-width: $container-size;
     margin-left: auto;
     margin-right: auto;
 }
@@ -19,6 +21,10 @@ body {
 
     /* Space for the navbar */
     padding-top: 50px;
+}
+
+nav {
+  box-shadow: 0px 0px 2px 1px rgba(0,0,0,.2);
 }
 
 header {
@@ -86,18 +92,34 @@ section .codey-sep {
     }
 }
 
-#portfolio {
-  .left-col {
-    text-align: right;
+@media(min-width: $bs-lg) {
+  #portfolio {
+    .left-col {
+      text-align: right;
+    }
+    .right-col {
+      text-align: left;
+    }
   }
-  .right-col {
-    text-align: left;
+}
+
+@media(max-width: $bs-lg - 1) {
+  #portfolio img {
+    max-width: 100%;
+    height: auto;
+    display: block;
   }
 }
 
 #portfolio img {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+@media(min-width: $container-size) {
+  #note {
+    margin-top: 270px;
+  }
 }
 
 #upper-footer {
