added social media links

--- a/index.jade
+++ b/index.jade
@@ -88,13 +88,13 @@ footer
         div.col-lg-3.col-lg-offset-2.text-center
           h2 Around the web
             ul.social-list
-              li: a.btn.btn-default.btn-circle.btn-lg
-                i.fa.fa-github(aria-hidden="true")
-              li: a.btn.btn-default.btn-circle.btn-lg
+              li: a.btn.btn-default.btn-circle.btn-lg(href="https://github.com/garfieldnate",target="_blank")
+                i.fa.fa-github(aria-hidden="true",target="_blank")
+              li: a.btn.btn-default.btn-circle.btn-lg(href="https://plus.google.com/u/0/+NathanGlenn1",target="_blank")
                 i.fa.fa-google-plus(aria-hidden="true")
-              li: a.btn.btn-default.btn-circle.btn-lg
+              li: a.btn.btn-default.btn-circle.btn-lg(href="skype:garfieldnate?userinfo")
                 i.fa.fa-skype(aria-hidden="true")
-              li: a.btn.btn-default.btn-circle.btn-lg
+              li: a.btn.btn-default.btn-circle.btn-lg(href="https://www.linkedin.com/in/nathanglenn",target="_blank")
                 i.fa.fa-linkedin(aria-hidden="true")
   div#lower-footer.text-center
     div.container
