--- a/index.jade
+++ b/index.jade
@@ -60,7 +60,7 @@ div.container
               label(for="message") Message
               textarea#message.form-control(rows=5,placeholder="Message",required="required")
             button.btn.btn-default(type="submit") Submit
-        div.col-lg-5
+        div.col-lg-5#contact-msg
           p.
             Want to contact me? Use this handy-dandy form! Tell me about a cool project you're working on, invite me to work for money, or just give me money. Anything's good, really.
         div.col-lg-5.col-lg-offset-6
