--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
-$background-color: dimGray;
+$body-color: #888;
 $head-foot-color: #aaa;
-$section-color: lightGray;
+$section-color: #eee;
 $icon-size: 0.8em;
 $container-size: 1024px;
 $bs-lg: 1200px;
@@ -14,10 +14,11 @@ $bs-lg: 1200px;
     max-width: $container-size;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0px 0px 1px 1px rgba(0,0,0,.2);
 }
 
 body {
-    background-color: $background-color;
+    background-color: $body-color;
 
     /* Space for the navbar */
     padding-top: 50px;
@@ -57,7 +58,7 @@ h2 {
 }
 
 section {
-    @include container($section-color, $background-color);
+    @include container($section-color, $body-color);
 }
 
 .codey-sep {
@@ -119,14 +120,35 @@ section .codey-sep {
   margin-bottom: 20px;
 }
 
-// Put "no soliciting" next to the button at the bottom of the form
-#contact-msg {
-  display: flex;
+// Put "no soliciting" next to the button at the bottom of the form.
+// There's no non-hacky way to do this...
+@media(min-width: $bs-lg) {
   #note {
-    align-self: flex-end;
+    margin-top: 420px;
+    margin-bottom: 1em;
   }
 }
 
+#contact-form {
+  font-size: 30px;
+  label {
+    display: none;
+  }
+  input,textarea {
+    background-color: transparent;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 3px solid rgba(0,0,0,.2);
+  }
+  input:focus,textarea:focus {
+    outline: 0;
+    -webkit-appearance: none;
+  }
+  .form-group:not(:last-child) {
+    margin-bottom: 2em;
+  }
+}
 
 #upper-footer {
   background-color: $head-foot-color;
