--- a/index.jade
+++ b/index.jade
@@ -1,20 +1,44 @@
 //- Note: section/header elements need to have .clearfix to avoid spaces between them
-link(script="https://code.jquery.com/jquery-2.2.4.min.js")
+script(src="https://code.jquery.com/jquery-2.2.4.min.js")
 link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
+script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
 link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
 link(rel="stylesheet",href="css/style.css")
 div.container
-  nav.navbar.navbar-default.navbar-fixed-top(role="navigator")
-    div.navbar-header
-      a.navbar-brand Nate Glenn
-    div.navbar-right
+  nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+    .navbar-header
+      button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-collapse')
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href='#') Nate Glenn
+    #navbar-collapse.collapse.navbar-collapse.navbar-right
       ul.nav.navbar-nav
         li.active
-          a.navbar-btn(href="#") about
+          a.navbar-btn(href='#') About
         li
-          a.navbar-btn portfolio
+          a.navbar-btn(href='#') Portfolio
         li
-          a.navbar-btn contact
+          a.navbar-btn(href="#") Contact
+
+  //- nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+  //-   a.navbar-brand.navbar-left Nate Glenn
+  //-   div.navbar-header.navbar-right
+  //-     button.navbar-toggle(type="button",data-toggle="collapse",data-target="#navbar-collapse")
+  //-       span.sr-only Toggle navigation
+  //-       span.icon-bar
+  //-       span.icon-bar
+  //-       span.icon-bar
+  //-     div.collapse.navbar-collapse#navbar-collapse
+  //-       ul.nav.navbar-nav
+  //-         //- CONTINUE HERE FROM TUTORIAL POINT
+  //-         li.active
+  //-           a.navbar-btn(href="#") about
+  //-         li
+  //-           a.navbar-btn portfolio
+  //-         li
+  //-           a.navbar-btn contact
   main
     header.clearfix
       div.row
