--- a/css/style.scss
+++ b/css/style.scss
@@ -19,15 +19,22 @@ $bs-lg: 1200px;
 
 body {
     background-color: $body-color;
-
     /* Space for the navbar */
     padding-top: 50px;
+}
+
+// fix titles of anchored sections being hidden by the navbar
+.anchor {
+  top: -60;
+  display: block;
+  position: relative;
+  visibility: hidden;
 }
 
 nav {
   box-shadow: 0px 0px 2px 1px rgba(0,0,0,.2);
 }
-.navbar-nav {
+#nav-contents {
   margin-right: 1em;
 }
 
