--- a/index.jade
+++ b/index.jade
@@ -4,125 +4,110 @@ link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
 link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
 link(rel="stylesheet",href="css/style.css")
-div.container
-  nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
-    .navbar-header
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-collapse')
+body(data-spy="scroll", data-target="#nav-contents")
+  a#about-anchor.anchor
+  div.container
+    nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+      button.navbar-toggle(type='button', data-toggle='collapse', data-target='#nav-contents')
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href='#') Nate Glenn
-    #navbar-collapse.collapse.navbar-collapse.navbar-right
-      ul.nav.navbar-nav
-        li.active
-          a.navbar-btn(href='#') About
-        li
-          a.navbar-btn(href='#') Portfolio
-        li
-          a.navbar-btn(href="#") Contact
-
-  //- nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
-  //-   a.navbar-brand.navbar-left Nate Glenn
-  //-   div.navbar-header.navbar-right
-  //-     button.navbar-toggle(type="button",data-toggle="collapse",data-target="#navbar-collapse")
-  //-       span.sr-only Toggle navigation
-  //-       span.icon-bar
-  //-       span.icon-bar
-  //-       span.icon-bar
-  //-     div.collapse.navbar-collapse#navbar-collapse
-  //-       ul.nav.navbar-nav
-  //-         //- CONTINUE HERE FROM TUTORIAL POINT
-  //-         li.active
-  //-           a.navbar-btn(href="#") about
-  //-         li
-  //-           a.navbar-btn portfolio
-  //-         li
-  //-           a.navbar-btn contact
-  main
-    header.clearfix
-      div.row
-        div.col-lg-8
-          p.intro I'm Nate, an NLP and soon-to-be frontend developer. I have extensive practical experience in software architecture and applied NLP. I'm a big fan of open source.
-          hr.codey-sep
-          p.titles
-            | Java developer - NLP practitioner - Open source enthusiast
-        div.col-lg-4.text-center
-          img.img-circle(src="http://placehold.it/220x220?text=Me!", alt="picture of Nate Glenn")
-    section.clearfix#portfolio
-      h2 Portfolio
-      hr.codey-sep
-      div.row.text-center
-        div.col-lg-6.left-col
-          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-        div.col-lg-6.right-col
-          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-        div.col-lg-6.left-col
-          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-        div.col-lg-6.right-col
-          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-        div.col-lg-6.left-col
-          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-        div.col-lg-6.right-col
-          img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-    section.clearfix
-      h2 Contact Me
-      hr.codey-sep
-      div.row
-        div.col-lg-5.col-lg-push-6#contact-msg
-          p.
-            Want to contact me? Use this handy-dandy form! Tell me about a cool project you're working on, invite me to work for money, or just give me money. Anything's good, really.
-          p#note.
-            Note: no soliciting or recruiters, por favor!
-        div.col-lg-5.col-lg-pull-4
-          form#contact-form
-            div.form-group
-              label(for="name",required="required") Name
-              input#name.form-item(type="text",placeholder="Jane/John Doe")
-            div.form-group
-              label(for="email") Email address
-              input#email.form-item(type="email",placeholder="you@xyz.com")
-            div.form-group
-              label(for="phNum") Phone Number
-              input#phNum.form-item(type="tel",placeholder="Phone Number")
-            div.form-group
-              label(for="message") Message
-              textarea#message.form-item(rows=5,placeholder="Message",required="required")
-            button.btn.btn-default(type="submit") Submit
-footer
-  div#upper-footer
-    div.container
-      div.row
-        div.col-lg-3.col-lg-offset-2.text-center
-          h2 About this page
-          p
-            | Made with
-            = ' '
-            i.fa.fa-heart
-            = ' '
-            | and
-            = ' '
-            i.fa.fa-birthday-cake
-            = ' '
-            | by
-            = ' '
-            a(href="#") Nate Glenn
-            | .
-        div.col-lg-3.col-lg-offset-2.text-center
-          h2 Around the web
-            ul.social-list
-              li: a.btn.btn-default.btn-circle.btn-lg(href="https://github.com/garfieldnate",target="_blank")
-                i.fa.fa-github(aria-hidden="true",target="_blank")
-              li: a.btn.btn-default.btn-circle.btn-lg(href="https://plus.google.com/u/0/+NathanGlenn1",target="_blank")
-                i.fa.fa-google-plus(aria-hidden="true")
-              li: a.btn.btn-default.btn-circle.btn-lg(href="skype:garfieldnate?userinfo")
-                i.fa.fa-skype(aria-hidden="true")
-              li: a.btn.btn-default.btn-circle.btn-lg(href="https://www.linkedin.com/in/nathanglenn",target="_blank")
-                i.fa.fa-linkedin(aria-hidden="true")
-  div#lower-footer.text-center
-    div.container
-    p Nate Glenn
-      = ' '
-      i.fa.fa-copyright
-      = ' '
-      | 2016. All rights reversed.
+      div#nav-contents.collapse.navbar-collapse.navbar-right
+        ul.nav.navbar-nav
+          li
+            a.navbar-btn(href='#about-anchor') About
+          li
+            a.navbar-btn(href='#portfolio-anchor') Portfolio
+          li
+            a.navbar-btn(href="#contact-anchor") Contact
+    main
+      header.clearfix#about
+        div.row
+          div.col-lg-8
+            p.intro I'm Nate, an NLP and soon-to-be frontend developer. I have extensive practical experience in software architecture and applied NLP. I'm a big fan of open source.
+            hr.codey-sep
+            p.titles
+              | Java developer - NLP practitioner - Open source enthusiast
+          div.col-lg-4.text-center
+            img.img-circle(src="http://placehold.it/220x220?text=Me!", alt="picture of Nate Glenn")
+      section.clearfix#portfolio
+        a#portfolio-anchor.anchor
+        h2 Portfolio
+        hr.codey-sep
+        div.row.text-center
+          div.col-lg-6.left-col
+            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          div.col-lg-6.right-col
+            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          div.col-lg-6.left-col
+            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          div.col-lg-6.right-col
+            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          div.col-lg-6.left-col
+            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          div.col-lg-6.right-col
+            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+      section.clearfix#contact
+        a#contact-anchor.anchor
+        h2 Contact Me
+        hr.codey-sep
+        div.row
+          div.col-lg-5.col-lg-push-6#contact-msg
+            p.
+              Want to contact me? Use this handy-dandy form! Tell me about a cool project you're working on, invite me to work for money, or just give me money. Anything's good, really.
+            p#note.
+              Note: no soliciting or recruiters, por favor!
+          div.col-lg-5.col-lg-pull-4
+            form#contact-form
+              div.form-group
+                label(for="name",required="required") Name
+                input#name.form-item(type="text",placeholder="Jane/John Doe")
+              div.form-group
+                label(for="email") Email address
+                input#email.form-item(type="email",placeholder="you@xyz.com")
+              div.form-group
+                label(for="phNum") Phone Number
+                input#phNum.form-item(type="tel",placeholder="Phone Number")
+              div.form-group
+                label(for="message") Message
+                textarea#message.form-item(rows=5,placeholder="Message",required="required")
+              button.btn.btn-default(type="submit") Submit
+  footer
+    div#upper-footer
+      div.container
+        div.row
+          div.col-lg-3.col-lg-offset-2.text-center
+            h2 About this page
+            p
+              | Made with
+              = ' '
+              i.fa.fa-heart
+              = ' '
+              | and
+              = ' '
+              i.fa.fa-birthday-cake
+              = ' '
+              | by
+              = ' '
+              a(href="#") Nate Glenn
+              | .
+          div.col-lg-3.col-lg-offset-2.text-center
+            h2 Around the web
+              ul.social-list
+                li: a.btn.btn-default.btn-circle.btn-lg(href="https://github.com/garfieldnate",target="_blank")
+                  i.fa.fa-github(aria-hidden="true",target="_blank")
+                li: a.btn.btn-default.btn-circle.btn-lg(href="https://plus.google.com/u/0/+NathanGlenn1",target="_blank")
+                  i.fa.fa-google-plus(aria-hidden="true")
+                li: a.btn.btn-default.btn-circle.btn-lg(href="skype:garfieldnate?userinfo")
+                  i.fa.fa-skype(aria-hidden="true")
+                li: a.btn.btn-default.btn-circle.btn-lg(href="https://www.linkedin.com/in/nathanglenn",target="_blank")
+                  i.fa.fa-linkedin(aria-hidden="true")
+    div#lower-footer.text-center
+      div.container
+      p Nate Glenn
+        = ' '
+        i.fa.fa-copyright
+        = ' '
+        | 2016. All rights reversed.
