--- a/index.jade
+++ b/index.jade
@@ -1,6 +1,11 @@
 //- Note: section/header elements need to have .clearfix to avoid spaces between them
-script(src="https://code.jquery.com/jquery-2.2.4.min.js")
+doctype html
+meta(charset="utf-8")
+meta(http-equiv="X-UA-Compatible", content="IE=edge")
+meta(name="viewport", content="width=device-width, initial-scale=1")
+
 link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
+script(src="https://code.jquery.com/jquery-2.2.4.min.js")
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
 link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
 link(rel="stylesheet",href="css/style.css")
@@ -8,20 +13,21 @@ body(data-spy="scroll", data-target="#nav-contents")
   a#about-anchor.anchor
   div.container
     nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='#nav-contents')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href='#') Nate Glenn
-      div#nav-contents.collapse.navbar-collapse.navbar-right
-        ul.nav.navbar-nav
-          li
-            a.navbar-btn(href='#about-anchor') About
-          li
-            a.navbar-btn(href='#portfolio-anchor') Portfolio
-          li
-            a.navbar-btn(href="#contact-anchor") Contact
+      div.container-fluid
+        button.navbar-toggle(type='button', data-toggle='collapse', data-target='#nav-contents')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='#') Nate Glenn
+        div#nav-contents.collapse.navbar-collapse.navbar-right
+          ul.nav.navbar-nav.nav-pills
+            li
+              a(href='#about-anchor') About
+            li
+              a(href='#portfolio-anchor') Portfolio
+            li
+              a(href="#contact-anchor") Contact
     main
       header.clearfix#about
         div.row
