--- a/index.jade
+++ b/index.jade
@@ -14,12 +14,13 @@ body(data-spy="scroll", data-target="#nav-contents")
   div.container
     nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
       div.container-fluid
-        button.navbar-toggle(type='button', data-toggle='collapse', data-target='#nav-contents')
-          span.sr-only Toggle navigation
-          span.icon-bar
-          span.icon-bar
-          span.icon-bar
-        a.navbar-brand(href='#') Nate Glenn
+        div.navbar-header
+          a.navbar-brand(href='#') Nate Glenn
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#nav-contents')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
         div#nav-contents.collapse.navbar-collapse.navbar-right
           ul.nav.navbar-nav.nav-pills
             li
