--- a/index.jade
+++ b/index.jade
@@ -44,18 +44,20 @@ body(data-spy="scroll", data-target="#nav-contents")
         h2 Portfolio
         hr.codey-sep
         div.row.text-center
-          div.col-lg-6.left-col
-            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-          div.col-lg-6.right-col
-            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-          div.col-lg-6.left-col
-            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-          div.col-lg-6.right-col
-            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-          div.col-lg-6.left-col
-            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
-          div.col-lg-6.right-col
-            img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+          div.col-lg-10.col-lg-offset-1
+            div.row
+              div.col-lg-6.left-col
+                img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+              div.col-lg-6.right-col
+                img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+              div.col-lg-6.left-col
+                img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+              div.col-lg-6.right-col
+                img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+              div.col-lg-6.left-col
+                img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
+              div.col-lg-6.right-col
+                img.img.img-responsive(src="http://placehold.it/420x275?text=Project", alt="picture of project")
       section.clearfix#contact
         a#contact-anchor.anchor
         h2 Contact Me
