fix broken anchor styling

--- a/css/style.scss
+++ b/css/style.scss
@@ -35,7 +35,7 @@ body {
 
 // fix titles of anchored sections being hidden by the navbar
 .anchor {
-  top: -60;
+  top: -50px;
   display: block;
   position: relative;
   visibility: hidden;
