--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,7 @@ $header-footer-color: $dark-orange;
 
 $container-size: 1024px;
 $bs-lg: 1200px;
+$bs-sm: 480px;
 
 @mixin container($bg-color, $text-color) {
     background-color: $bg-color;
@@ -79,7 +80,7 @@ $icon-size: 0.8em;
 .codey-sep {
     border: none;
     height: 5px;
-    max-width: 512px;
+    max-width: $container-size/2;
     margin-top: 2 * $icon-size;
 
     &:after {
@@ -91,6 +92,12 @@ $icon-size: 0.8em;
         padding: 0px .25em 0px .25em;
         top: -$icon-size;
     }
+}
+
+@media(max-width:564px){
+  .codey-sep {
+    width: 85%;
+  }
 }
 
 header .codey-sep {
@@ -146,6 +153,13 @@ section .codey-sep {
   }
 }
 
+@media(max-width: $bs-sm) {
+  #contact-msg {
+    margin-left: .5em;
+    margin-right: .5em;
+  }
+}
+
 #contact-form {
   font-size: 30px;
   label {
@@ -157,6 +171,8 @@ section .codey-sep {
     border-left: 0;
     border-right: 0;
     border-bottom: 3px solid rgba(0,0,0,.2);
+    max-width: 90%;
+    margin-left: .5em;
   }
   input:focus,textarea:focus {
     outline: 0;
