--- a/index.jade
+++ b/index.jade
@@ -39,7 +39,7 @@ body(data-spy="scroll", data-target="#nav-contents")
             p.titles
               | Java developer - NLP practitioner - Open source enthusiast
           div.col-lg-4.text-center
-            img.img-circle(src="http://placehold.it/220x220?text=Me!", alt="picture of Nate Glenn")
+            img#img-me(src="http://placehold.it/220x220?text=Me!", alt="picture of Nate Glenn")
       section.clearfix#portfolio
         a#portfolio-anchor.anchor
         h2 Portfolio
